--- a/index.html
+++ b/index.html
@@ -125,20 +125,57 @@
         @media (max-width: 480px) {
             .main-content {
                 padding: 1rem 0;
+                min-height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .logo {
                 font-size: 2rem;
-                margin-bottom: 1.5rem;
+                margin-bottom: 1rem;
             }
 
             .title {
-                font-size: 1.75rem;
+                font-size: 1.5rem;
+                margin-bottom: 0.5rem;
             }
 
             .subtitle {
-                font-size: 1rem;
-                margin-bottom: 2rem;
+                font-size: 0.9rem;
+                margin-bottom: 1rem;
+            }
+
+            .footer {
+                padding: 1rem 0;
+                margin-top: auto;
+            }
+        }
+
+        /* iPhone specific */
+        @media (max-width: 390px) {
+            .main-content {
+                padding: 0.5rem 0;
+            }
+
+            .logo {
+                font-size: 1.8rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .title {
+                font-size: 1.3rem;
+                margin-bottom: 0.3rem;
+            }
+
+            .subtitle {
+                font-size: 0.85rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .footer {
+                padding: 0.8rem 0;
+                font-size: 0.8rem;
             }
         }
 
