--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
         }
 
         /* Mobile Responsive */
+        @media (max-width: 1024px) {
+            .logo {
+                font-size: 2.8rem;
+            }
+
+            .title {
+                font-size: 2.2rem;
+            }
+
+            .subtitle {
+                font-size: 1.15rem;
+            }
+        }
+
         @media (max-width: 768px) {
             .logo {
                 font-size: 2.5rem;
@@ -122,7 +136,7 @@
             }
         }
 
-        /* Large phones (iPhone 13 Pro Max, Galaxy S21+) */
+        /* Large phones (iPhone 13 Pro Max, Galaxy S21 Ultra) */
         @media (max-width: 480px) {
             .main-content {
                 padding: 1rem 0;
