Complete comprehensive responsive design for all devices

--- a/index.html
+++ b/index.html
@@ -107,37 +107,111 @@
             text-decoration: underline;
         }
 
-        /* Mobile Responsive */
-        @media (max-width: 1024px) {
+        /* COMPREHENSIVE RESPONSIVE DESIGN */
+        
+        /* Large Desktop (1440px+) */
+        @media (min-width: 1440px) {
+            .container {
+                max-width: 1000px;
+            }
+            .logo {
+                font-size: 3.5rem;
+            }
+            .title {
+                font-size: 3rem;
+            }
+            .subtitle {
+                font-size: 1.4rem;
+            }
+        }
+
+        /* Desktop (1200px - 1439px) */
+        @media (max-width: 1439px) and (min-width: 1200px) {
+            .logo {
+                font-size: 3.2rem;
+            }
+            .title {
+                font-size: 2.8rem;
+            }
+            .subtitle {
+                font-size: 1.3rem;
+            }
+        }
+
+        /* Small Desktop (1024px - 1199px) */
+        @media (max-width: 1199px) and (min-width: 1024px) {
+            .logo {
+                font-size: 3rem;
+            }
+            .title {
+                font-size: 2.5rem;
+            }
+            .subtitle {
+                font-size: 1.25rem;
+            }
+        }
+
+        /* Large Tablet (768px - 1023px) */
+        @media (max-width: 1023px) and (min-width: 768px) {
+            .container {
+                max-width: 600px;
+            }
             .logo {
                 font-size: 2.8rem;
             }
-
             .title {
                 font-size: 2.2rem;
             }
-
             .subtitle {
                 font-size: 1.15rem;
             }
         }
 
-        @media (max-width: 768px) {
+        /* Small Tablet (600px - 767px) */
+        @media (max-width: 767px) and (min-width: 600px) {
+            .container {
+                max-width: 500px;
+            }
             .logo {
                 font-size: 2.5rem;
             }
-
             .title {
                 font-size: 2rem;
             }
-
             .subtitle {
                 font-size: 1.1rem;
             }
         }
 
-        /* Large phones (iPhone 13 Pro Max, Galaxy S21 Ultra) */
-        @media (max-width: 480px) {
+        /* Large Phone Landscape (480px - 599px) */
+        @media (max-width: 599px) and (min-width: 480px) {
+            .main-content {
+                padding: 1.5rem 0;
+                min-height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            .logo {
+                font-size: 2.2rem;
+                margin-bottom: 1.2rem;
+            }
+            .title {
+                font-size: 1.8rem;
+                margin-bottom: 0.8rem;
+            }
+            .subtitle {
+                font-size: 1rem;
+                margin-bottom: 1.2rem;
+            }
+            .footer {
+                padding: 1.2rem 0;
+                margin-top: auto;
+            }
+        }
+
+        /* Large Phone Portrait (414px - 479px) */
+        @media (max-width: 479px) and (min-width: 414px) {
             .main-content {
                 padding: 1rem 0;
                 min-height: 100vh;
@@ -145,79 +219,128 @@
                 align-items: center;
                 justify-content: center;
             }
-
             .logo {
                 font-size: 2rem;
                 margin-bottom: 1rem;
             }
-
             .title {
-                font-size: 1.5rem;
-                margin-bottom: 0.5rem;
+                font-size: 1.6rem;
+                margin-bottom: 0.6rem;
             }
-
             .subtitle {
-                font-size: 0.9rem;
+                font-size: 0.95rem;
                 margin-bottom: 1rem;
             }
-
             .footer {
                 padding: 1rem 0;
                 margin-top: auto;
             }
         }
 
-        /* Medium phones (iPhone 13 Pro, Galaxy S21) */
-        @media (max-width: 390px) {
+        /* Medium Phone (390px - 413px) */
+        @media (max-width: 413px) and (min-width: 390px) {
             .main-content {
                 padding: 0.8rem 0;
+                min-height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
-
             .logo {
                 font-size: 1.8rem;
                 margin-bottom: 0.8rem;
             }
-
             .title {
-                font-size: 1.3rem;
-                margin-bottom: 0.3rem;
+                font-size: 1.4rem;
+                margin-bottom: 0.4rem;
             }
-
             .subtitle {
-                font-size: 0.85rem;
+                font-size: 0.9rem;
                 margin-bottom: 0.8rem;
             }
-
             .footer {
                 padding: 0.8rem 0;
-                font-size: 0.8rem;
+                margin-top: auto;
+                font-size: 0.85rem;
             }
         }
 
-        /* Small phones (iPhone SE, Galaxy A series) */
-        @media (max-width: 375px) {
+        /* Small Phone (375px - 389px) */
+        @media (max-width: 389px) and (min-width: 375px) {
             .main-content {
-                padding: 0.5rem 0;
+                padding: 0.6rem 0;
+                min-height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
-
             .logo {
                 font-size: 1.6rem;
                 margin-bottom: 0.6rem;
             }
-
             .title {
                 font-size: 1.2rem;
-                margin-bottom: 0.2rem;
+                margin-bottom: 0.3rem;
             }
-
             .subtitle {
-                font-size: 0.8rem;
+                font-size: 0.85rem;
                 margin-bottom: 0.6rem;
             }
-
             .footer {
                 padding: 0.6rem 0;
+                margin-top: auto;
+                font-size: 0.8rem;
+            }
+        }
+
+        /* Very Small Phone (320px - 374px) */
+        @media (max-width: 374px) {
+            .main-content {
+                padding: 0.4rem 0;
+                min-height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            .logo {
+                font-size: 1.4rem;
+                margin-bottom: 0.4rem;
+            }
+            .title {
+                font-size: 1.1rem;
+                margin-bottom: 0.2rem;
+            }
+            .subtitle {
+                font-size: 0.8rem;
+                margin-bottom: 0.4rem;
+            }
+            .footer {
+                padding: 0.4rem 0;
+                margin-top: auto;
                 font-size: 0.75rem;
+            }
+        }
+
+        /* Landscape orientation adjustments */
+        @media (max-height: 500px) and (orientation: landscape) {
+            .main-content {
+                padding: 0.5rem 0;
+            }
+            .logo {
+                font-size: 1.8rem;
+                margin-bottom: 0.5rem;
+            }
+            .title {
+                font-size: 1.4rem;
+                margin-bottom: 0.3rem;
+            }
+            .subtitle {
+                font-size: 0.9rem;
+                margin-bottom: 0.5rem;
+            }
+            .footer {
+                padding: 0.5rem 0;
+                font-size: 0.8rem;
             }
         }
 
