Add timestamp to force Safari cache refresh

--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
                 <div class="logo fade-in-up">The List.</div>
                 
                 <h1 class="title fade-in-up-delay">Peagi ainult valitutele!</h1>
+                <p style="display: none;">2025-01-29</p>
             </div>
         </div>
     </div>
