Center text under Kiirus loeb

--- a/rotermann-digiprojekt-kokkuvote-2025.html
+++ b/rotermann-digiprojekt-kokkuvote-2025.html
@@ -769,7 +769,7 @@
         
         <div class="highlight-box">
             <h4>Kiirus loeb</h4>
-            <p style="color: var(--text-muted); margin-top: 8px;">Mida kiiremini teenus turule jõuab, seda kiiremini saame valideerida ja arendada.</p>
+            <p style="color: var(--text-muted); margin-top: 8px; text-align: center;">Mida kiiremini teenus turule jõuab, seda kiiremini saame valideerida ja arendada.</p>
         </div>
     </div>
 </div>
