Kiirem ramp-up: täiskatvus märtsiks

--- a/rotermann-digiplaan-2026.html
+++ b/rotermann-digiplaan-2026.html
@@ -1268,13 +1268,13 @@
 
 <script>
 (function() {
-    // Monthly plan data (2X KIIREM ADOPTSIOON)
+    // Monthly plan data (KIIRE RAMP-UP)
     const monthlyPlan = [
         { month: 'Jaanuar', employees: 0, note: 'Seadistus' },
-        { month: 'Veebruar', employees: 1069, note: 'Golden Gate live' },
-        { month: 'Märts', employees: 2645, note: '+Rot 6, 8, 2, 14' },
-        { month: 'Aprill', employees: 3600, note: '+Rot 18, Värvilised' },
-        { month: 'Mai', employees: 4000, note: 'Täielik katvus' },
+        { month: 'Veebruar', employees: 2645, note: 'Golden Gate + Rot 6, 8, 2, 14' },
+        { month: 'Märts', employees: 4000, note: 'Täielik katvus' },
+        { month: 'Aprill', employees: 4000, note: '' },
+        { month: 'Mai', employees: 4000, note: '' },
         { month: 'Juuni', employees: 4000, note: '' },
         { month: 'Juuli', employees: 4000, note: '' },
         { month: 'August', employees: 4000, note: '' },
