Realistlikum ramp-up: täiskatvus aprilliks

--- a/rotermann-digiplaan-2026.html
+++ b/rotermann-digiplaan-2026.html
@@ -1268,12 +1268,12 @@
 
 <script>
 (function() {
-    // Monthly plan data (KIIRE RAMP-UP)
+    // Monthly plan data (REALISTLIK RAMP-UP)
     const monthlyPlan = [
         { month: 'Jaanuar', employees: 0, note: 'Seadistus' },
-        { month: 'Veebruar', employees: 2645, note: 'Golden Gate + Rot 6, 8, 2, 14' },
-        { month: 'Märts', employees: 4000, note: 'Täielik katvus' },
-        { month: 'Aprill', employees: 4000, note: '' },
+        { month: 'Veebruar', employees: 1500, note: 'Golden Gate + Rot 6' },
+        { month: 'Märts', employees: 3000, note: '+Rot 8, 2, 14' },
+        { month: 'Aprill', employees: 4000, note: 'Täielik katvus' },
         { month: 'Mai', employees: 4000, note: '' },
         { month: 'Juuni', employees: 4000, note: '' },
         { month: 'Juuli', employees: 4000, note: '' },
