Muuda pealkiri professionaalsemaks

--- a/rotermann-digiplaan-2026.html
+++ b/rotermann-digiplaan-2026.html
@@ -1102,7 +1102,7 @@
         
         <!-- Rahavoo selgitus finantsistidele -->
         <div class="info-box" style="margin-bottom: 24px; background: linear-gradient(135deg, #fff8e1 0%, #fff3e0 100%); border-left: 4px solid #f57c00;">
-            <h3 style="color: #e65100; margin-bottom: 16px;">💰 Rahavoo loogika finantsistidele</h3>
+            <h3 style="color: #e65100; margin-bottom: 16px;">Investeeringu struktuur</h3>
             <div style="display: grid; gap: 16px;">
                 <div style="padding: 12px; background: white; border-radius: 8px;">
                     <strong style="color: #e65100;">Miks kapital on vajalik?</strong>
